<resources>
    <string name="app_name">JetBooksApp</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite Book</string>
    <string name="menu_about">About</string>
    <string name="back">Kembali</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="empty_data">Data is Empty</string>
    <string name="book_is_not_found">Book is not found</string>
    <string name="my_name">Thoriq Hidayat</string>
    <string name="my_email">thoriq1130@gmail.com</string>
    <string name="about_page">about_page</string>
</resources>