...
        )
        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("BookList")
        ) {
            items(books) { data ->
                BookItem(
                    image = data.image,
                    title = data.title,
                    author = data.author,
...
